--- a/src/css/pages/scss/project.scss
+++ b/src/css/pages/scss/project.scss
@@ -10,6 +10,7 @@
 
 
         .swiper-slide {
+            position: relative;
             height: 100%;
             text-align: center;
             background-color: rgba(255, 255, 255, .5);
@@ -19,6 +20,61 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+            }
+
+            .project_title {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                position: absolute;
+                top: -10%;
+
+                .num {
+                    font-family: var(--mainNum-font);
+                    font-weight: 600;
+                    opacity: .4;
+                    font-size: 22px;
+                }
+
+                p {
+                    opacity: 0;
+                    font-family: var(--mainEng-font);
+                    text-transform: capitalize;
+                    font-size: 24px;
+                    font-weight: 600;
+                    padding: 5px 0;
+                    transition: .35s;
+                }
+            }
+
+            &:hover{
+                .project_title{
+                    p{
+                        opacity: 1;
+                    }
+                }
+            }
+
+            .project_detail {
+                position: absolute;
+                bottom: -50px;
+                left: -50px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-family: var(--mainEng-font);
+                background-color: var(--mainColor100-color);
+                width: 100px;
+                height: 100px;
+                text-align: center;
+                border-radius: 50%;
+            }
+
+            .project_date {
+                position: absolute;
+                right: 5px;
+                bottom: -25px;
+                font-size: var(--font-size-EngST1-P);
             }
         }
     }
@@ -33,51 +89,7 @@
         padding: 0 20px;
     }
 
-    .project_title {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        position: absolute;
-        top: -23%;
-        left: -29%;
 
-        h2 {
-            font-family: var(--mainNum-font);
-            font-style: italic;
-            font-weight: 700;
-            opacity: .4;
-        }
-
-        p {
-            font-family: var(--mainEng-font);
-            text-transform: capitalize;
-            font-style: italic;
-            font-weight: 700;
-            white-space: nowrap;
-        }
-    }
-
-    .project_detail {
-        position: absolute;
-        bottom: -50px;
-        left: -50px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-family: var(--mainEng-font);
-        background-color: var(--mainColor100-color);
-        width: 100px;
-        height: 100px;
-        text-align: center;
-        border-radius: 50%;
-    }
-
-    .project_date {
-        position: absolute;
-        right: 5px;
-        bottom: -25px;
-        font-size: var(--font-size-EngST1-P);
-    }
 }
 
 @media (max-width:767px) {
@@ -103,9 +115,25 @@
     .projectSwiper {
         width: 70%;
 
+        .swiper-slide:nth-child(odd) {
+            top: 0;
+            transition: .35s;
+        }
+
         .swiper-slide:nth-child(even) {
-            position: relative;
             top: 100px;
+            transition: .35s;
+        }
+
+        .swiper-slide:hover {
+
+            &.swiper-slide:nth-child(odd) {
+                top: 50px;
+            }
+
+            &.swiper-slide:nth-child(even) {
+                top: 150px;
+            }
         }
     }
 
@@ -116,6 +144,7 @@
         }
 
         P {
+
             font-size: var(--font-size-EngT1-P);
         }
     }
