--- a/src/css/pages/scss/title.scss
+++ b/src/css/pages/scss/title.scss
@@ -1,28 +1,21 @@
-section {
-    .title {
-        position: absolute;
-        // left: 50px;
-        // top: 50px;
-        left: 10px;
-        top: 50px;
-    
-        h2 {
-            font-family: var(--mainEng-font);
-            color: var(--subColor100-color);
-            font-size: 50px;
-            font-weight: 700;
-            text-transform: uppercase;
-        }
-    
-        p {
-            opacity: .5;
-            font-family: var(--mainKorL-font);
-            // font-size: var(--font-size-KorST2);
-            font-size: var(--font-size-KorST3);
-            text-transform: uppercase;
-            margin-top: 20px;
-            line-height: 1.5;
-            padding: 0 10px ;
-        }
-    }
+.title {
+    font-size: 3vw;
+    line-height: 1.6;
+    font-family: var(--mainEng-font);
+    font-weight: 600;
+    text-transform: uppercase;
+    color: var(--subColor100-color);
+    position: sticky;
+    top: 100px;
+    padding: 2%;
 }
+
+.title em {
+    display: block;
+    font-family: var(--mainKorT-font);
+    letter-spacing: 1px;
+    font-size: 22px;
+   
+}
+
+// 'Pretendard-Thin'
