--- a/src/css/pages/scss/uxui.scss
+++ b/src/css/pages/scss/uxui.scss
@@ -1,200 +1,147 @@
 #uxui {
-    height: auto;
 
-    &::after {
-        background-attachment: fixed;
-        z-index: 1;
-    }
 
-    .uxui_box{
-        .uxui_poster-container {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            height: 100%;
-    
-            .uxui_poster-box {
-                position: relative;
-                z-index: 10;
-    
-                .uxui_poster {
-                    position: relative;
-                    height: auto;
-    
-                    .uxui_poster-img {
-                        position: relative;
-                        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    
-                        img {
-                            width: 100%;
-                            object-fit: cover;
-                        }
-    
-                        &::after {
-                            content: '';
-                            width: 100%;
-                            height: 100%;
-                            position: absolute;
-                            left: 0;
-                            top: 0;
-                            background-color: rgba(0, 0, 0, 0.5);
-                            transition: .35s;
-                        }
-    
-                        &:hover {
-                            &::after {
-                                background-color: rgba(0, 0, 0, 0);
-                            }
-                        }
-                    }
-                }
-    
-                .uxui_poster-title {
-                    position: absolute;
-                    top: 50%;
-                    transform: translateY(-50%);
-                    font-family: var(--mainEng-font);
-                    text-transform: capitalize;
-                    white-space: nowrap;
-                }
-    
-                .uxui_desc {
-                    position: absolute;
-    
-                    h2 {
-                        border-bottom: 2px solid #fff;
-                        font-family: var(--mainNum-font);
-                        font-size: var(--font-size-Num1-P);
-                    }
-    
-                    .uxui_skill {
-                        font-family: var(--mainEng-font);
-                        font-size: var(--font-size-EngST1-P);
-                        text-transform: capitalize;
-                        padding: 10px 0;
-                    }
-    
-                    .uxui_date {
-                        font-family: var(--mainNum-font);
-                    }
-                }
-            }
-        }
-    }
-}
+      .gallery-wrap {
+        max-width: 1200px;
+        margin: auto;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 3rem;
+      }
+  
+      .gallery-wrap li {
+        position: relative;
+        cursor: pointer;
+  
+      }
+  
+      .gallery-wrap li:nth-child(even) {
+        margin-top: 50px;
+      }
+  
+      .item {
+        position: relative;
+        overflow: hidden;
+        max-width: 1000px;
+        aspect-ratio: 1/1;
+      }
+  
+  
+      .item img {
+        position: absolute;
+        left: 50%;
+        top: 0;
+        transform: translateX(-50%);
+        object-fit: cover;
+        // width: 100%;
+        height: 150%;
+        transition: .35s;
+        aspect-ratio: 1/1.5;
+  
+      }
+  
+      .item1 {
+        grid-row: 1;
+        grid-column: 1;
+      }
+  
+      .item2 {
+        grid-row: 1;
+        grid-column: 3;
+      }
+  
+      .item3 {
+        grid-row: 2;
+        grid-column: 2;
+      }
+  
+      .item4 {
+        grid-row: 3;
+        grid-column: 1;
+      }
+  
+      .item5 {
+        grid-row: 3;
+        grid-column: 3;
+      }
+  
+      .item6 {
+        grid-row: 4;
+        grid-column: 2;
+      }
+  
+      .item7 {
+        grid-row: 5;
+        grid-column: 1;
+      }
 
-@media (max-width:767px) {
+      .item8 {
+        grid-row: 5;
+        grid-column: 3;
+      }
 
-    #uxui {
-        .uxui_box {
-            padding: 180px 0;
+      .item9 {
+        grid-row: 7;
+        grid-column: 2;
+      }
 
-            .uxui_poster-container {
-                flex-direction: column;
-                gap: 200px;
-                padding-bottom: 80px;
+      .item10 {
+        grid-row: 8;
+        grid-column: 1;
+      }
 
-                .uxui_poster-box {
-                    width: 350px;
-                    margin: auto;
+      .item11 {
+        grid-row: 8;
+        grid-column: 3;
+      }
 
-                    .uxui_poster {
-                        width: 350px;
-                        // height: 450px;
+      .item12 {
+        grid-row: 9;
+        grid-column: 2;
+      }
 
-                        .uxui_desc {
-                            left: 0;
-                            bottom: -140px;
-
-                            h2 {
-                                width: 350px;
-                            }
-                        }
-                    }
-
-                    .uxui_poster-title {
-                        font-size: 4rem;
-                        left: -30px;
-                    }
-                }
-            }
-        }
-
-    }
-}
-
-@media (min-width:768px) {
-
-    .uxui_box {
-        .uxui_poster-container {
-            padding: 0 40px 200px 40px;
-
-            .uxui_poster-box {
-                height: 350px;
-                width: 45%;
-                border: 1px solid #000;
-
-                .uxui_poster {
-                    width: 350px;
-
-                    .uxui_desc {
-                        left: 0;
-                        bottom: -140px;
-
-                        h2 {
-                            width: 350px;
-                        }
-                    }
-                }
-
-                .uxui_poster-title {
-                    font-size: 4em;
-                    left: -30px;
-                }
-            }
-
-            .uxui_poster-box:nth-child(odd) {
-                margin-top: 100px;
-            }
-
-            .uxui_poster-box:nth-child(even) {
-                margin-top: 400px;
-            }
-        }
-    }
-}
-
-@media (min-width:1024px) {
-
-    #uxui {
-        .uxui_box {
-            padding: 100px 80px;
-
-            .uxui_poster-container {
-                padding: 0 50px;
-
-                .uxui_poster-box {
-                    height: 400px;
-
-                    .uxui_poster {
-                        width: 400px;
-
-                        .uxui_desc {
-                            left: 110%;
-                            top: 0;
-
-                            h2 {
-                                width: 400px;
-                            }
-                        }
-                    }
-
-                    .uxui_poster-title {
-                        font-size: 5rem;
-                        left: -50px;
-                    }
-                }
-            }
-        }
-    }
+      .item13 {
+        grid-row: 10;
+        grid-column: 1;
+      }
+  
+      /*------------------------------------------*/
+      .summary {
+        position: absolute;
+        color: #fff;
+        z-index: 99;
+        left: -40%;
+        bottom: 0;
+        opacity: 0;
+        transition: .35s;
+  
+      }
+  
+      .rtl .summary {
+        left: 50%
+      }
+  
+      li:hover .summary {
+        opacity: 1;
+      }
+  
+   
+      .summary h3 {
+        white-space: nowrap;
+        line-height: .7;
+        text-transform: capitalize;
+        font-weight: 900;
+        color: transparent;
+        -webkit-text-stroke: 1px #fff;
+        font-size: 4vw;
+  
+      }
+  
+      .summary p {
+        font-weight: normal;
+        font-size: 2vw;
+        margin-top: 20px;
+        border: 1px solid #000;
+      }
 }
