--- a/src/css/pages/title.css
+++ b/src/css/pages/title.css
@@ -1,21 +1,18 @@
-section .title {
-  position: absolute;
-  left: 10px;
-  top: 50px;
-}
-section .title h2 {
+.title {
+  font-size: 3vw;
+  line-height: 1.6;
   font-family: var(--mainEng-font);
+  font-weight: 600;
+  text-transform: uppercase;
   color: var(--subColor100-color);
-  font-size: 50px;
-  font-weight: 700;
-  text-transform: uppercase;
+  position: sticky;
+  top: 100px;
+  padding: 2%;
 }
-section .title p {
-  opacity: 0.5;
-  font-family: var(--mainKorL-font);
-  font-size: var(--font-size-KorST3);
-  text-transform: uppercase;
-  margin-top: 20px;
-  line-height: 1.5;
-  padding: 0 10px;
+
+.title em {
+  display: block;
+  font-family: var(--mainKorT-font);
+  letter-spacing: 1px;
+  font-size: 22px;
 }
