--- a/src/css/pages/uxui.css
+++ b/src/css/pages/uxui.css
@@ -1,151 +1,116 @@
 #uxui {
-  height: auto;
+  /*------------------------------------------*/
 }
-#uxui::after {
-  background-attachment: fixed;
-  z-index: 1;
+#uxui .gallery-wrap {
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 3rem;
 }
-#uxui .uxui_box .uxui_poster-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  height: 100%;
-}
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box {
+#uxui .gallery-wrap li {
   position: relative;
-  z-index: 10;
+  cursor: pointer;
 }
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster {
+#uxui .gallery-wrap li:nth-child(even) {
+  margin-top: 50px;
+}
+#uxui .item {
   position: relative;
-  height: auto;
+  overflow: hidden;
+  max-width: 1000px;
+  aspect-ratio: 1/1;
 }
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img {
-  position: relative;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img img {
-  width: 100%;
-  object-fit: cover;
-}
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img::after {
-  content: "";
-  width: 100%;
-  height: 100%;
+#uxui .item img {
   position: absolute;
-  left: 0;
+  left: 50%;
   top: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  transform: translateX(-50%);
+  object-fit: cover;
+  height: 150%;
+  transition: 0.35s;
+  aspect-ratio: 1/1.5;
+}
+#uxui .item1 {
+  grid-row: 1;
+  grid-column: 1;
+}
+#uxui .item2 {
+  grid-row: 1;
+  grid-column: 3;
+}
+#uxui .item3 {
+  grid-row: 2;
+  grid-column: 2;
+}
+#uxui .item4 {
+  grid-row: 3;
+  grid-column: 1;
+}
+#uxui .item5 {
+  grid-row: 3;
+  grid-column: 3;
+}
+#uxui .item6 {
+  grid-row: 4;
+  grid-column: 2;
+}
+#uxui .item7 {
+  grid-row: 5;
+  grid-column: 1;
+}
+#uxui .item8 {
+  grid-row: 5;
+  grid-column: 3;
+}
+#uxui .item9 {
+  grid-row: 7;
+  grid-column: 2;
+}
+#uxui .item10 {
+  grid-row: 8;
+  grid-column: 1;
+}
+#uxui .item11 {
+  grid-row: 8;
+  grid-column: 3;
+}
+#uxui .item12 {
+  grid-row: 9;
+  grid-column: 2;
+}
+#uxui .item13 {
+  grid-row: 10;
+  grid-column: 1;
+}
+#uxui .summary {
+  position: absolute;
+  color: #fff;
+  z-index: 99;
+  left: -40%;
+  bottom: 0;
+  opacity: 0;
   transition: 0.35s;
 }
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_poster-img:hover::after {
-  background-color: rgba(0, 0, 0, 0);
+#uxui .rtl .summary {
+  left: 50%;
 }
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster-title {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  font-family: var(--mainEng-font);
-  text-transform: capitalize;
+#uxui li:hover .summary {
+  opacity: 1;
+}
+#uxui .summary h3 {
   white-space: nowrap;
-}
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_desc {
-  position: absolute;
-}
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_desc h2 {
-  border-bottom: 2px solid #fff;
-  font-family: var(--mainNum-font);
-  font-size: var(--font-size-Num1-P);
-}
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_desc .uxui_skill {
-  font-family: var(--mainEng-font);
-  font-size: var(--font-size-EngST1-P);
+  line-height: 0.7;
   text-transform: capitalize;
-  padding: 10px 0;
+  font-weight: 900;
+  color: transparent;
+  -webkit-text-stroke: 1px #fff;
+  font-size: 4vw;
 }
-#uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_desc .uxui_date {
-  font-family: var(--mainNum-font);
-}
-
-@media (max-width: 767px) {
-  #uxui .uxui_box {
-    padding: 180px 0;
-  }
-  #uxui .uxui_box .uxui_poster-container {
-    flex-direction: column;
-    gap: 200px;
-    padding-bottom: 80px;
-  }
-  #uxui .uxui_box .uxui_poster-container .uxui_poster-box {
-    width: 350px;
-    margin: auto;
-  }
-  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster {
-    width: 350px;
-  }
-  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc {
-    left: 0;
-    bottom: -140px;
-  }
-  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc h2 {
-    width: 350px;
-  }
-  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster-title {
-    font-size: 4rem;
-    left: -30px;
-  }
-}
-@media (min-width: 768px) {
-  .uxui_box .uxui_poster-container {
-    padding: 0 40px 200px 40px;
-  }
-  .uxui_box .uxui_poster-container .uxui_poster-box {
-    height: 350px;
-    width: 45%;
-    border: 1px solid #000;
-  }
-  .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster {
-    width: 350px;
-  }
-  .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc {
-    left: 0;
-    bottom: -140px;
-  }
-  .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc h2 {
-    width: 350px;
-  }
-  .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster-title {
-    font-size: 4em;
-    left: -30px;
-  }
-  .uxui_box .uxui_poster-container .uxui_poster-box:nth-child(odd) {
-    margin-top: 100px;
-  }
-  .uxui_box .uxui_poster-container .uxui_poster-box:nth-child(even) {
-    margin-top: 400px;
-  }
-}
-@media (min-width: 1024px) {
-  #uxui .uxui_box {
-    padding: 100px 80px;
-  }
-  #uxui .uxui_box .uxui_poster-container {
-    padding: 0 50px;
-  }
-  #uxui .uxui_box .uxui_poster-container .uxui_poster-box {
-    height: 400px;
-  }
-  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster {
-    width: 400px;
-  }
-  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc {
-    left: 110%;
-    top: 0;
-  }
-  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster .uxui_desc h2 {
-    width: 400px;
-  }
-  #uxui .uxui_box .uxui_poster-container .uxui_poster-box .uxui_poster-title {
-    font-size: 5rem;
-    left: -50px;
-  }
+#uxui .summary p {
+  font-weight: normal;
+  font-size: 2vw;
+  margin-top: 20px;
+  border: 1px solid #000;
 }
