--- a/style.css
+++ b/style.css
@@ -13,22 +13,23 @@
 @import url(./src/css/pages/about.css);
 @import url(./src/css/pages/footer.css);
 @import url(./src/css/pages/title.css);
-@import url(./src/css/pages/cursor.css);
+@import url(./src/css/pages/path.css);
+@import url(./src/css/pages/bubble.css);
+
 
 section {
-    height: 100vh;
     position: relative;
     overflow: hidden;
     border: 1px solid #000;
+    min-height: 100vh;
+    contain: paint;
+  
 }
 
-section::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: url(/src/assets/images/light-bg.png) no-repeat center center;
+/* .wrap{
+    background: url(./src/assets/bg-img/background.jpg) no-repeat center top;
     background-size: cover;
-}
+ 
+    border: 1px solid #ff0;
+    z-index: 10;
+} */
